# simpleAI

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  ReadMe.md  SNNLib.sln  appveyor.yml  download_mnist.py  index.html
SNNLib/: ReadMe.md  SNNLib.vcxproj  SNNLib.vcxproj.filters  main.cpp  results.xlsx
SNNLib/include/: DenseLayer.h  Dropout.h  NNLayer.h  NeuralNetwork.h  activators.h  lossFunctions.h  mnistDataSet.h  nntypes.h  simpleNN.h  spiralDataset.h
SNNLib/src/: DenseLayer.cpp  Dropout.cpp  NNLayer.cpp  NeuralNetwork.cpp  main.cpp  mnistDataSet.cpp
docs/: index.md  introduction.md  project_structure.md
docs/examples/: demo_mnist.md
examples/: CMakeLists.txt  autoencoder_mnist.cpp  demo_mnist.cpp  mnist.cpp  mnist_model.cpp  sequential_mnist.cpp  spiral.cpp  spiral_test.cpp
libsnn/: CMakeLists.txt
libsnn/include/: DenseLayer.h  Dropout.h  NNLayer.h  NeuralNetwork.h  activators.h  lossFunctions.h  mnistDataSet.h  nntypes.h  simpleNN.h  spiralDataset.h
libsnn/include/snn/: activator.hpp  initializer.hpp  layer.hpp  loss.hpp  nntypes.hpp  optimizer.hpp  snn.hpp  variable.hpp
libsnn/include/snn/activator/: base_activator.hpp  leaky_relu.hpp  relu.hpp  sigmoid.hpp  tanh.hpp
libsnn/include/snn/dataset/: dataset.hpp  mnist.hpp  spiral.hpp
libsnn/include/snn/initializer/: base_initializer.hpp  normal.hpp  xavier.hpp  zeros.hpp
libsnn/include/snn/layer/: base_layer.hpp  dense.hpp  dropout.hpp  flatten.hpp
libsnn/include/snn/loss/: base_loss.hpp  cross_entropy.hpp  hillinger.hpp  quadratic.hpp
libsnn/include/snn/math/: tensor.hpp  tmath.hpp
libsnn/include/snn/misc/: constant.hpp  kwargs.hpp  random.hpp  string_constant.hpp  time.hpp
libsnn/include/snn/model/: autoencoder.hpp  base_model.hpp  sequential.hpp
libsnn/include/snn/optimizer/: adagrad.hpp  adam.hpp  base_optimizer.hpp  momentum.hpp  rmsprop.hpp  sgd.hpp
libsnn/include/snn/util/: argparse.hpp  image.hpp  progress_bar.hpp  utils.hpp
libsnn/src/: DenseLayer.cpp  Dropout.cpp  NNLayer.cpp  NeuralNetwork.cpp  activator.cpp  initializer.cpp  layer.cpp  loss.cpp  mnistDataSet.cpp  optimizer.cpp  variable.cpp
libsnn/src/activator/: leaky_relu.cpp  relu.cpp  sigmoid.cpp  tanh.cpp
libsnn/src/dataset/: mnist.cpp  spiral.cpp
libsnn/src/initializer/: normal.cpp  xavier.cpp  zeros.cpp
libsnn/src/layer/: dense.cpp  dropout.cpp  flatten.cpp
libsnn/src/loss/: cross_entropy.cpp  hillinger.cpp  quadratic.cpp
libsnn/src/misc/: kwargs.cpp  random.cpp  time.cpp
libsnn/src/model/: autoencoder.cpp  sequential.cpp
libsnn/src/optimizer/: adagrad.cpp  adam.cpp  momentum.cpp  rmsprop.cpp  sgd.cpp
libsnn/src/util/: argparse.cpp  image.cpp  progress_bar.cpp  utils.cpp
scripts/: autoencoder_stitch.sh  download_fashion.py  download_mnist.py
tests/: CMakeLists.txt  test_activator.cpp  test_initializer.cpp  test_kwargs.cpp  test_layer.cpp  test_loss.cpp  test_model.cpp  test_optimizer.cpp  test_tensor.cpp  test_tmath.cpp  test_variable.cpp
